--- a/src/assets/sass/components/_cursor.scss
+++ b/src/assets/sass/components/_cursor.scss
@@ -4,5 +4,5 @@
     left: 0;
     height: 10px;
     background-color: $cursor_color;
-    transition: all .2s linear;
+    transition: all 100ms linear;
 }
