--- a/src/assets/sass/media/_emoji_media.scss
+++ b/src/assets/sass/media/_emoji_media.scss
@@ -3,3 +3,9 @@
         right: 38.2%!important;
     }
 }
+@media (max-width:1400px) {
+    #timer_emoji{
+       display: none!important;
+    }
+}
+
